Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   
   <ol>
     <li>Spread butter on bread and frying pan</li>
-    <li></li>
+    <li>Place bread in frying pan and fry</li>
+    <li>
+    </li>
   </ol>
 
 </body>
