--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   <ol>
     <li>Spread butter on bread and frying pan</li>
     <li>Place bread in frying pan and fry</li>
-    <li>
-    </li>
+    <li>Add cheese on top of bread</li>
   </ol>
 
 </body>
