--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <li>Place bread in frying pan and fry</li>
     <li>Add cheese on top of bread</li>
     <li>Cover with second slice of bread</li>
+    <li>Turn over and fry for 2 minutes
+
+</li>
   </ol>
 
 </body>
