--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 <body>
   <ul>
     <li>2 slices of bread</li>
-    <li>4 slices of cheese</li>
+    <li>4 slices of cheese
       <ul>
         <li>cheddar</li>
         <li>mozzarella</li>
         <li>pepper</li>
       </ul>
+      <li></li>
     <li>1 tbsp of butter</li>
   </ul>
 
